samples/_failures_safe/1761005635_118182_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ef1ecd28.c: In function ‘parser_init’:
./samples/SAFE/__tmp_ef1ecd28.c:156: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_ef1ecd28.c:155:5: error: expected declaration or statement at end of input
  155 |     if
      |     ^~
